Reflect filename changes

--- a/client/index.html
+++ b/client/index.html
@@ -72,7 +72,7 @@
 
 
     <script src="app.js"></script>
-    <script src="signup.js"></script>
-    <script src="FormController.js"></script>
+    <script src="allAppsController.js"></script>
+    <script src="addAppsController.js"></script>
   </body>
 </html>
