refactor(AddApp View/Controller, Signup Html): Refactor Controller/Servies and minor bug fix

--- a/client/signup.html
+++ b/client/signup.html
@@ -16,7 +16,7 @@
   </head>
 
   <!-- Definining Angular app -->
-  <body ng-app="AppTracker">
+  <body ng-app="at">
 
     <!-- Header -->
     <header class="mdl-layout__header mdl-layout__header--waterfall">
