--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="AppTracker">
   <head>
     <link href="./styles/style.css" rel="stylesheet" type="text/css">
     <title>AppTrack</title>
@@ -16,7 +16,7 @@
   </head>
 
   <!-- Definining Angular app -->
-  <body ng-app="AppTracker">
+  <body>
 
     <!-- Header -->
     <header class="mdl-layout__header mdl-layout__header--waterfall">
