fix(App.js): Fix an issue where some modules are not being loaded
Add at.auth, fix typo AddAppsController

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="AppTracker">
+<html lang="en" ng-app="at">
   <head>
     <link href="./styles/style.css" rel="stylesheet" type="text/css">
     <title>AppTrack</title>
