--- a/client/app/addApps/addApps.html
+++ b/client/app/addApps/addApps.html
@@ -1,6 +1,6 @@
 <div class="container">
   <!-- ADD APP VIEW using FormController, Display depends on ng-show hideDiv  -->
-  <div id="form" ng-controller="FormController" ng-show="!hideDiv">
+  <div id="form" ng-controller="AddAppsController" ng-show="!hideDiv">
     <form>
       <div id="outreach" class="mdl-textfield mdl-js-textfield">
 
