--- a/client/app/allApps/allApps.html
+++ b/client/app/allApps/allApps.html
@@ -1,6 +1,6 @@
 <div class="container">
   <!-- ALL APPLICATION VIEW using FormController, Display depends on ng-show showDiv -->
-  <div id="positions" ng-controller="FormController" ng-hide="!showDiv">
+  <div id="positions" ng-controller="AllAppsController" ng-hide="!showDiv">
 
     <!-- ALL APPLICATION VIEW title -->
     <h1 class="animated fadeIn" id="openApps" style="font-family: 'Carme', sans-serif;">Open Applications</h1>
