fix(Server.js, Index.html): Add serve static file path
Fix an issue where some of the static files weren't being served

--- a/client/index.html
+++ b/client/index.html
@@ -72,7 +72,7 @@
 
 
     <script src="app.js"></script>
-    <script src="allAppsController.js"></script>
-    <script src="addAppsController.js"></script>
+    <script src="/allApps/allAppsController.js"></script>
+    <script src="/addApps/addAppsController.js"></script>
   </body>
 </html>
