fix(index.html, server.js, app.js): Load correct module, serve static files

--- a/client/index.html
+++ b/client/index.html
@@ -70,9 +70,10 @@
       </div> <!-- Closing BOTTOM ROW -->
     </header> <!-- Closing HEADER -->
 
-
     <script src="app.js"></script>
     <script src="/allApps/allAppsController.js"></script>
     <script src="/addApps/addAppsController.js"></script>
+    <script src="/services/services.js"></script>
+    <script src="/login/auth.js"></script>
   </body>
 </html>
