fix(allApps.html, allAppsController.js): WIP Fix an issue where results from database is not being r

--- a/client/app/allApps/allApps.html
+++ b/client/app/allApps/allApps.html
@@ -11,7 +11,7 @@
     </div>
 
     <!-- ng-repeat Application -->
-    <ul class="animated zoomIn" id ng-repeat='result in results | filter:searchText track by $index' ng-model='results'>
+    <ul class="animated zoomIn" ng-repeat='result in results' ng-model='results'>
 
       <div id="list-item">
 
