--- a/client/index.html
+++ b/client/index.html
@@ -70,6 +70,8 @@
       </div> <!-- Closing BOTTOM ROW -->
     </header> <!-- Closing HEADER -->
 
+    <div class="rows" ng-view></div>
+
     <script src="app.js"></script>
     <script src="/allApps/allAppsController.js"></script>
     <script src="/addApps/addAppsController.js"></script>
