fix(allApps.html, addAppsController.js, allAppsController.js): allApps.html page renders
Fix an issue where ng-show variable was preventing the page from being rendered

--- a/client/app/allApps/allApps.html
+++ b/client/app/allApps/allApps.html
@@ -1,6 +1,6 @@
 <div class="container">
   <!-- ALL APPLICATION VIEW using FormController, Display depends on ng-show showDiv -->
-  <div id="positions" ng-controller="AllAppsController" ng-hide="!showDiv">
+  <div id="positions">
 
     <!-- ALL APPLICATION VIEW title -->
     <h1 class="animated fadeIn" id="openApps" style="font-family: 'Carme', sans-serif;">Open Applications</h1>
@@ -15,7 +15,7 @@
 
       <div id="list-item">
 
-        <!-- Individual Application Card -->
+        <!-- Individual Application Card a-->
         <li id="card">
           <div id="card-title"><strong>Open Position</strong><br></div>
 
