fix(allApps, ApplicationModel/Controller): Documented allApps.html, removed server side console mess

--- a/client/app/allApps/allApps.html
+++ b/client/app/allApps/allApps.html
@@ -10,16 +10,17 @@
       <input id="field"  class="mdl-textfield__input" type="text" placeholder="Search Here" ng-model="searchText">
     </div>
 
-    <!-- ng-repeat Application -->
+    <!-- ng-repeat APPLICATIONS. It has 1) Open Position Card, 2) Add Stage Card -->
     <ul class="animated zoomIn" ng-repeat='result in results' ng-model='results'>
 
       <div id="list-item">
 
-        <!-- Individual Application Card a-->
+        <!-- 1) Open Position Card, has 5 fields -->
+        <!-- i) COMPANY, ii) ROLE, iii) JOB DESC, iv) APPLIED THRU, v) CONTACTS-->
         <li id="card">
           <div id="card-title"><strong>Open Position</strong><br></div>
 
-          <!-- COMPANY CLICK TO EDIT -->
+          <!-- i) COMPANY -->
           <div id="field" ng-click="enableEditor($index)"><strong>Company:</strong><br>
             <span ng-hide="edit.editorEnabled">{{result.companyName}}</span>
           </div>
@@ -27,7 +28,7 @@
             <input ng-model="edit.companyName" ng-show="edit.editorEnabled" id="field" class="mdl-textfield__input" type="text">
           </div>
 
-          <!-- ROLE CLICK TO EDIT -->
+          <!-- ii) ROLE -->
           <div id="field" ng-click="enableEditor($index)"><strong>Role:</strong><br>
             <span ng-hide="edit.editorEnabled">{{result.role}}</span>
           </div>
@@ -35,7 +36,7 @@
             <input ng-model="edit.role" ng-show="edit.editorEnabled" id="field" class="mdl-textfield__input" type="text">
           </div>
 
-          <!-- JOB DESCRIPTION CLICK TO EDIT -->
+          <!-- iii) JOB DESCRIPTION -->
           <div id="field" ng-click="enableEditor($index)"><strong>Job Description:</strong><br>
            <span ng-hide="edit.editorEnabled">{{result.jobDescription}}</span>
           </div>
@@ -43,7 +44,7 @@
            <input ng-model="edit.jobDescription" ng-show="edit.editorEnabled" id="field" class="mdl-textfield__input" type="text">
           </div>
 
-          <!-- APPLIED THROUGH CLICK TO EDIT -->
+          <!-- iv) APPLIED THROUGH -->
           <div id="field" ng-click="enableEditor($index)"><strong>Applied Through:</strong><br>
             <span ng-hide="edit.editorEnabled">{{result.appliedThrough}}</span>
           </div>
@@ -51,7 +52,7 @@
             <input ng-model="edit.appliedThrough" ng-show="edit.editorEnabled" id="field" class="mdl-textfield__input" type="text">
           </div>
 
-          <!-- CONTACT NAME CLICK TO EDIT -->
+          <!-- v) CONTACT NAME -->
           <div id="field" ng-click="enableEditor($index)"><strong>Contact Name:</strong><br>
             <span ng-hide="edit.editorEnabled">{{result.contactName}}</span>
           </div>
@@ -63,8 +64,12 @@
           <!-- Save Button -->
           <button ng-click="save($index, edit)" ng-show="edit.editorEnabled">Save</button>
 
-        </li><!-- Closing Individual Application Card -->
+        </li><!-- Closing Open Position Card -->
 
+        <!-- 2) Add Stage Card -->
+        <!-- has STAGE TYPE drop down menu, DATE, Primary Interview, Follow up date, Reply Received -->
+
+        <!-- Displays Stage Data -->
         <div id="stage-name" ng-repeat="stage in results[$index].stages track by $index" ng-model="results">
           <div id="card-title"><strong>Stage {{$index + 1}}</strong><br></div>
           <div id="field"><strong>Interview Type:</strong><br>{{stage.interviewType}}</div>
@@ -74,6 +79,7 @@
           <div id="field"><strong>Reply Received:</strong><br>{{stage.interviewReplyReceived}}</div>
         </div>
 
+        <!-- Displays Add Stage Card -->
         <div class="add-stage">
           <div id="card-title"><strong>Add Stage</strong><br></div>
           <br>
