perf(Serving Angular as static):

--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,6 @@
   <head>
     <link href="./styles/style.css" rel="stylesheet" type="text/css">
     <title>AppTrack</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.9/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.9/angular-route.js"></script>
 
     <!-- MATERIAL IO SCRIPTS BELOW -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -63,6 +61,8 @@
 
     <div class="rows" ng-view></div>
 
+    <script src="angular/angular.js"></script>
+    <script src="angular-route/angular-route.js"></script>
     <script src="app.js"></script>
     <script src="/allApps/allAppsController.js"></script>
     <script src="/addApps/addAppsController.js"></script>
