--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <title>AppTrack</title>
 
     <!-- MATERIAL IO SCRIPTS BELOW -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Carme" rel="stylesheet">
@@ -17,7 +18,7 @@
   <body>
 
     <!-- Header -->
-    <header class="mdl-layout__header mdl-layout__header--waterfall">
+    <header class="">
 
       <!-- TOP ROW: Title, Search.  Always visible -->
       <div class="mdl-layout__header-row">
@@ -46,12 +47,17 @@
 
           <!-- Add Aps/All Apps Button -->
           <!-- This toggles ng-show hideDiv (ADD APP VIEW) and showDiv (All Application View ) -->
-          <div ng-click="toggle = !toggle">
-            <button ng-click="hideDiv = !hideDiv" class="mdl-button--raised">
-              <a ng-click="showDiv = !showDiv" class="mdl-navigation__link" href="">
-                <a href="/#/addApps" class="mdl-navigation__link" ng-show="toggle">Add App</a>
-                <a href="/#/" class="mdl-navigation__link" ng-hide="toggle">All Apps</a>
-              </a>
+          <div>
+            <button class="btn btn-warning">
+              <a href="/#!/" class="mdl-navigation__link" >All Apps</a>
+            </button>
+            <button class="btn btn-warning">
+              <a href="/#!/addApps" class="mdl-navigation__link">Add App</a>
+            </button>
+            <button class="btn btn-warning">
+
+              <!-- TODO need to add the check for header token to show logout button!!!!! -->
+              <a href="/#!/addApps" class="mdl-navigation__link">Logout</a>
             </button>
           </div>
 
