fix(routing, url): Disable hashbang by turning html5 mode, remove leading /# from a href tags

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="./styles/style.css" rel="stylesheet" type="text/css">
     <title>AppTrack</title>
+    <base href="/" />
 
     <!-- MATERIAL IO SCRIPTS BELOW -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -49,15 +50,15 @@
           <!-- This toggles ng-show hideDiv (ADD APP VIEW) and showDiv (All Application View ) -->
           <div>
             <button class="btn btn-warning">
-              <a href="/#!/" class="mdl-navigation__link" >All Apps</a>
+              <a href="/" class="mdl-navigation__link" >All Apps</a>
             </button>
             <button class="btn btn-warning">
-              <a href="/#!/addApps" class="mdl-navigation__link">Add App</a>
+              <a href="/addApps" class="mdl-navigation__link">Add App</a>
             </button>
             <button class="btn btn-warning">
 
               <!-- TODO need to add the check for header token to show logout button!!!!! -->
-              <a href="/#!/addApps" class="mdl-navigation__link">Logout</a>
+              <a href="/addApps" class="mdl-navigation__link">Logout</a>
             </button>
           </div>
 
