fix(server): fix mongoose

--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -23,6 +23,6 @@
       <button type="submit" class="btn btn-warning btn-lg" ng-click='signin()'>Login</button>
     </form> <!-- closing Post form line 4 -->
     <hr>
-    <p>Need an account? <a href="#/signup">Signup</a></p>
+    <p>Need an account? <a href="#!/signup">Signup</a></p>
   </div>  <!-- closing div line 2 -->
 </div>  <!-- closing div line 1 -->
