--- a/client/app/login/signup.html
+++ b/client/app/login/signup.html
@@ -23,6 +23,6 @@
       <button type="submit" class="btn btn-warning btn-lg" ng-click='signup()'>Signup</button>
     </form>  <!-- closing Post form line 4 -->
     <hr>
-    <p>Already have an account? <a href="#/login">Login</a></p>
+    <p>Already have an account? <a href="#!/login">Login</a></p>
   </div>  <!-- closing div line 2 -->
 </div>  <!-- closing div line 1 -->
