fix(app.js, index.html): add hashbangs back

--- a/client/index.html
+++ b/client/index.html
@@ -50,12 +50,12 @@
               <a href="/" class="mdl-navigation__link" >All Apps</a>
             </button>
             <button class="btn btn-warning">
-              <a href="/addApps" class="mdl-navigation__link">Add App</a>
+              <a href="/#!/addApps" class="mdl-navigation__link">Add App</a>
             </button>
             <button class="btn btn-warning">
 
               <!-- TODO need to add the check for header token to show logout button!!!!! -->
-              <a href="/addApps" class="mdl-navigation__link">Logout</a>
+              <a href="/#!/addApps" class="mdl-navigation__link">Logout</a>
             </button>
           </div>
 
