feat: Great new name

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="at">
   <head>
     <link href="./styles/style.css" rel="stylesheet" type="text/css">
-    <title>AppTrack</title>
+    <title>HoHTrak</title>
     <base href="/" />
 
     <!-- MATERIAL IO SCRIPTS BELOW -->
@@ -22,7 +22,7 @@
     <div class="mdl-layout__header-row">
 
       <!-- Title -->
-      <span style="font-family: Pacifico" id="title">AppTrak</span>
+      <span id="title">HoHTrak</span>
 
       <div class="mdl-layout-spacer"></div>
 
