--- a/client/index.html
+++ b/client/index.html
@@ -55,7 +55,7 @@
             <button class="btn btn-warning">
 
               <!-- TODO need to add the check for header token to show logout button!!!!! -->
-              <a href="/#!/addApps" class="mdl-navigation__link">Logout</a>
+              <a href="/#!/login" class="mdl-navigation__link">Logout</a>
             </button>
           </div>
 
