--- a/client/index.html
+++ b/client/index.html
@@ -45,7 +45,7 @@
 
           <!-- Add Aps/All Apps Button -->
           <!-- This toggles ng-show hideDiv (ADD APP VIEW) and showDiv (All Application View ) -->
-          <div>
+          <div ng-controller="AuthController">
             <button class="btn btn-warning">
               <a href="/" class="mdl-navigation__link" >All Apps</a>
             </button>
@@ -55,7 +55,7 @@
             <button class="btn btn-warning">
 
               <!-- TODO need to add the check for header token to show logout button!!!!! -->
-              <a href="/#!/login" class="mdl-navigation__link">Logout</a>
+              <a href="/#!/login" class="mdl-navigation__link" ng-click="signout()">Logout</a>
             </button>
           </div>
 
