--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -3,7 +3,7 @@
     <h1><span class="fa fa-sign-in"></span>Login</h1>
     <form method="post">
       <div class="form-group">
-        <label>Email</label>
+        <label>Username</label>
         <input
           type="text"
           class="form-control"
