feat(FE): Require email upon signing up

--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -7,11 +7,9 @@
         <input
           type="text"
           class="form-control"
-          name="email"
+          name="username"
           ng-model="user.username"
         >
-      </div> <!-- closing email div line 5 -->
-      <div class="form-group">
         <label>Password</label>
         <input
           type="password"
