--- a/client/index.html
+++ b/client/index.html
@@ -53,6 +53,9 @@
               <a href="/#!/addApps" class="mdl-navigation__link">Add App</a>
             </button>
             <button class="btn btn-warning">
+              <a href="/#!/completedApps" class="mdl-navigation__link">Completed App</a>
+            </button>
+            <button class="btn btn-warning">
 
               <!-- TODO need to add the check for header token to show logout button!!!!! -->
               <a href="/#!/login" class="mdl-navigation__link" ng-click="signout()">Logout</a>
@@ -70,6 +73,7 @@
     <script src="app.js"></script>
     <script src="/allApps/allAppsController.js"></script>
     <script src="/addApps/addAppsController.js"></script>
+    <script src="/completedApps/completedAppsController.js"></script>
     <script src="/services/services.js"></script>
     <script src="/login/auth.js"></script>
   </body>
