style(addapps): red asterisks for required fields
red asterisks for required fields

--- a/client/app/addApps/addApps.html
+++ b/client/app/addApps/addApps.html
@@ -9,15 +9,15 @@
         <form method='post'>
         <!-- First Column -->
           <div>
-            <label>Application Start Date</label>
+            <label>Application Start Date <img height='10px' width='10px' src='../Assets/required.png' /></label>
             <input class='form-control' id="field" class="mdl-textfield__input" type="date" ng-model="data.startDate">
           </div>
           <div>
-            <label>Company Name</label>
-            <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model=data.companyName>
+            <label>Company Name <img height='10px' width='10px' src='../Assets/required.png' /></label>
+            <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model='data.companyName'>
           </div>
           <div>
-            <label>Position</label>
+            <label>Position <img height='10px' width='10px' src='../Assets/required.png' /></label>
             <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model="data.role">
           </div>
           <div>
@@ -25,7 +25,7 @@
             <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model="coverLetter">
           </div>
           <div>
-            <label>Job Description</label>
+            <label>Job Description <img height='10px' width='10px' src='../Assets/required.png' /></label>
             <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model="data.jobDescription">
           </div>
           <div>
@@ -33,17 +33,17 @@
             <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model="data.appliedThrough">
           </div>
           <div>
-            <label>Contact Name</label>
+            <label>Contact Name <img height='10px' width='10px' src='../Assets/required.png' /></label>
             <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model="data.contactName">
           </div>
 
         <!-- Second Column -->
           <div>
-            <label>Contact Phone Number</label>
+            <label>Contact Phone Number <img height='10px' width='10px' src='../Assets/required.png' /></label>
             <input class='form-control' id="field"  class="mdl-textfield__input" type="tel" ng-model="data.contactPhone">
           </div>
           <div>
-            <label>Contact Email Address</label>
+            <label>Contact Email Address <img height='10px' width='10px' src='../Assets/required.png' /></label>
             <input class='form-control' id="field"  class="mdl-textfield__input" type="email" ng-model="data.contactEmail">
           </div>
           <div>
