--- a/client/app/login/signup.html
+++ b/client/app/login/signup.html
@@ -3,14 +3,14 @@
     <h1><span class="fa fa-sign-in"></span>Signup</h1>
     <form name="signUpForm" method="post">
       <div class="form-group">
-        <label>Username</label>
+        <label>Username <img height='10px' width='10px' src='../Assets/required.png' /></label>
         <input
           type="text"
           class="form-control"
           name="email"
           ng-model="user.username"
         >
-        <label>Email</label>
+        <label>Email <img height='10px' width='10px' src='../Assets/required.png' /></label>
         <input
         type="email"
         class="form-control"
@@ -18,7 +18,7 @@
         ng-model="user.email"
         required
         >
-        <label>Password</label>
+        <label>Password <img height='10px' width='10px' src='../Assets/required.png' /></label>
         <input
           type="password"
           class="form-control"
