--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -3,14 +3,14 @@
     <h1><span class="fa fa-sign-in"></span>Login</h1>
     <form method="post">
       <div class="form-group">
-        <label>Username</label>
+        <label>Username <img height='10px' width='10px' src='../Assets/required.png' /></label>
         <input
           type="text"
           class="form-control"
           name="username"
           ng-model="user.username"
         >
-        <label>Password</label>
+        <label>Password <img height='10px' width='10px' src='../Assets/required.png' /></label>
         <input
           type="password"
           class="form-control"
