fix(addAppsController.js): fix add button to redirect

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
     <div class="mdl-layout__header-row">
 
       <!-- Title -->
-      <span id="title">HoHTrak</span>
+      <h1 id="title"><a href="/">HoHTrak</a></h1>
 
       <div class="mdl-layout-spacer"></div>
 
