--- a/client/app/completedApps/completedApps.html
+++ b/client/app/completedApps/completedApps.html
@@ -83,13 +83,22 @@
         <div class="add-stage">
           <div id="card-title"><strong>Add Stage</strong><br></div>
           <br>
-          <select ng-model="stageattrs.interviewType">
+          <select>
+            <option selected disabled>Select a Stage...</option>
             <option ng-repeat="x in stageSelect track by $index">{{x}}</option>
           </select>
-          <input id="field" class="mdl-textfield__input" type="date" placeholder="Date Completed" ng-model="stageattrs.interviewCompletedDate" required>
-          <input id="field" class="mdl-textfield__input" type="text" placeholder="Primary Interviewer Type" ng-model="stageattrs.interviewerType" required>
-          <div id="field"><strong>Last Follow Up</strong><br></div>
-          <input id="field" class="mdl-textfield__input" type="date" placeholder="Last Follow Up" ng-model="stageattrs.dateOfLastFollowUp" required>
+          <div>
+            <label>Date Completed</label>
+            <input id="field" class="mdl-textfield__input" type="date" ng-model="stageattrs.interviewCompletedDate" required>
+          </div>
+          <div>
+            <label>Interviewer</label>
+            <input id="field" class="mdl-textfield__input" type="text" ng-model="stageattrs.interviewerType" required>
+          </div>
+          <div>
+            <label>Date of Last Follow Up</label>
+            <input id="field" class="mdl-textfield__input" type="date" ng-model="stageattrs.dateOfLastFollowUp" required>
+          </div>
           <div id="field">Reply Received  <input type="checkbox" ng-model="stageattrs.interviewReplyReceived" required></div>
           <br>
           <input type="submit" ng-click="pushToStages($index)" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
