--- a/client/app/addApps/addApps.html
+++ b/client/app/addApps/addApps.html
@@ -21,8 +21,11 @@
             <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model="data.role">
           </div>
           <div>
-            <label>Cover Letter Upload</label>
-            <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model="coverLetter">
+            <form>
+              <label>Cover Letter Upload</label>
+              <input class='form-control' name='coverLetter' type="file" enctype='multipart/form-data'>
+              <button type='submit' class="btn btn-default">Upload</button>
+            </form>
           </div>
           <div>
             <label>Job Description <img height='10px' width='10px' src='../Assets/required.png' /></label>
