--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -1,26 +1,25 @@
 <div class="container" ng-controller='AuthController'>
-  <div class="col-sm-6 col-sm-offset-3">
-    <h1><span class="fa fa-sign-in"></span>Login</h1>
-    <form method="post">
-      <div class="form-group">
-        <label>Username <img height='10px' width='10px' src='../Assets/required.png' /></label>
-        <input
-          type="text"
-          class="form-control"
-          name="username"
-          ng-model="user.username"
-        >
+  <div class="col-sm-8 col-sm-offset-2">
+    <div class="page-header"><h1>Login</h1></div>
+    <form name="signInForm" ng-submit="signin(signInForm.$valid)" novalidate>
+
+      <div class="form-group" ng-class="{ 'has-error' : signInForm.username.$invalid && !signInForm.username.$pristine }">
+        <label>Username<img height='10px' width='10px' src='../Assets/required.png' /></label>
+        <input type="text" name="username" class="form-control" ng-model="user.username" ng-minlength="6" ng-maxlength="20">
+        <p ng-show="signInForm.username.$error.minlength" class="help-block">Username is too short.</p>
+        <p ng-show="signInForm.username.$error.maxlength" class="help-block">Username is too long.</p>
+      </div>
+
+      <div class="form-group" ng-class="{ 'has-error' : signInForm.password.$invalid && !signInForm.password.$pristine }">
         <label>Password <img height='10px' width='10px' src='../Assets/required.png' /></label>
-        <input
-          type="password"
-          class="form-control"
-          name="password"
-          ng-model="user.password"
-        >
-      </div>  <!-- closing password div line 14 -->
-      <button type="submit" class="btn btn-warning btn-lg" ng-click='signin()'>Login</button>
+        <input type="password" name="password" class="form-control" ng-model="user.password" required>
+        <p ng-show="signInForm.password.$invalid && !signInForm.password.$pristine" class="help-block">Please Enter a password</p>
+      </div>
+
+      <button type="submit" class="btn btn-primary" ng-disabled="signInForm.$invalid">Signin</button>
+
     </form> <!-- closing Post form line 4 -->
-    <hr>
+    <br>
     <p>Need an account? <a href="/#!/signup">Signup</a></p>
   </div>  <!-- closing div line 2 -->
 </div>  <!-- closing div line 1 -->
