--- a/client/app/addApps/addApps.html
+++ b/client/app/addApps/addApps.html
@@ -1,67 +1,63 @@
 <div class="container">
-  <!-- ADD APP VIEW using FormController, Display depends on ng-show hideDiv  -->
-  <div id="form">
-    <form>
-      <div id="outreach">
 
-        <!--  ADD APP VIEW Title -->
-        <h1>New Application</h1>
-        <form name='addNewApp' method='post'>
-        <!-- First Column -->
-          <div>
-            <label>Application Start Date <img height='10px' width='10px' src='../Assets/required.png' /></label>
-            <input class='form-control' id="field" class="mdl-textfield__input" type="date" ng-model="data.startDate">
-          </div>
-          <div>
-            <label>Company Name <img height='10px' width='10px' src='../Assets/required.png' /></label>
-            <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model='data.companyName'>
-          </div>
-          <div>
-            <label>Position <img height='10px' width='10px' src='../Assets/required.png' /></label>
-            <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model="data.role">
-          </div>
-          <div>
-            <form>
-              <label>Cover Letter Upload</label>
-              <input class='form-control' name='coverLetter' type="file" enctype='multipart/form-data'>
-              <button type='submit' class="btn btn-default">Upload</button>
-            </form>
-          </div>
-          <div>
-            <label>Job Description <img height='10px' width='10px' src='../Assets/required.png' /></label>
-            <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model="data.jobDescription">
-          </div>
-          <div>
-            <label>Applied Through</label>
-            <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model="data.appliedThrough">
-          </div>
-          <div>
-            <label>Contact Name <img height='10px' width='10px' src='../Assets/required.png' /></label>
-            <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model="data.contactName">
-          </div>
-          <div>
-            <label>Contact Phone Number <img height='10px' width='10px' src='../Assets/required.png' /></label>
-            <input class='form-control' id="field"  class="mdl-textfield__input" type="number" ng-model="data.contactPhone">
-          </div>
-          <div>
-            <label>Contact Email Address <img height='10px' width='10px' src='../Assets/required.png' /></label>
-            <input class='form-control' id="field"  class="mdl-textfield__input" type="email" ng-model="data.contactEmail">
-          </div>
-          <div>
-            <label>Date Applied</label>
-            <input class='form-control' id="field"  class="mdl-textfield__input" type="date" ng-model="data.dateApplied">
-          </div>
-          <div>
-            <label>Date of Last Contact</label>
-            <input class='form-control' id="field"  class="mdl-textfield__input" type="date" ng-model="data.dateOfLastContact">
-          </div>
+  <!-- ADD APP VIEW using FormController-->
+  <div id="Add App View">
 
-          <br><br>
+    <!--  ADD APP VIEW Title -->
+    <div class="page-header"><h1>New Application</h1></div>
 
-          <!-- Add Button -->
-          <button class='btn btn-warning' ng-click='addNewApp.$valid && submitForm()' id="addButton">Add</button>
-        </form>
-      </div> <!-- Closing outreach div -->
-    </form> <!-- Closing form -->
+    <form name='addNewApp' method='post' ng-submit="submitForm(signInForm.$valid)" novalidate>
+    <!-- First Column -->
+      <div>
+        <label>Application Start Date <img height='10px' width='10px' src='../Assets/required.png' /></label>
+        <input class='form-control' id="field" class="mdl-textfield__input" type="date" ng-model="data.startDate">
+      </div>
+      <div>
+        <label>Company Name <img height='10px' width='10px' src='../Assets/required.png' /></label>
+        <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model='data.companyName'>
+      </div>
+      <div>
+        <label>Position <img height='10px' width='10px' src='../Assets/required.png' /></label>
+        <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model="data.role">
+      </div>
+      <div>
+          <label>Cover Letter Upload</label>
+          <input class='form-control' name='coverLetter' type="file" enctype='multipart/form-data'>
+          <button type='submit' class="btn btn-default">Upload</button>
+      </div>
+      <div>
+        <label>Job Description <img height='10px' width='10px' src='../Assets/required.png' /></label>
+        <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model="data.jobDescription">
+      </div>
+      <div>
+        <label>Applied Through</label>
+        <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model="data.appliedThrough">
+      </div>
+      <div>
+        <label>Contact Name <img height='10px' width='10px' src='../Assets/required.png' /></label>
+        <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model="data.contactName">
+      </div>
+      <div>
+        <label>Contact Phone Number <img height='10px' width='10px' src='../Assets/required.png' /></label>
+        <input class='form-control' id="field"  class="mdl-textfield__input" type="number" ng-model="data.contactPhone">
+      </div>
+      <div>
+        <label>Contact Email Address <img height='10px' width='10px' src='../Assets/required.png' /></label>
+        <input class='form-control' id="field"  class="mdl-textfield__input" type="email" ng-model="data.contactEmail">
+      </div>
+      <div>
+        <label>Date Applied</label>
+        <input class='form-control' id="field"  class="mdl-textfield__input" type="date" ng-model="data.dateApplied">
+      </div>
+      <div>
+        <label>Date of Last Contact</label>
+        <input class='form-control' id="field"  class="mdl-textfield__input" type="date" ng-model="data.dateOfLastContact">
+      </div>
+
+      <br><br>
+
+      <!-- Add Button -->
+      <button class='btn btn-warning' id="addButton">Add</button>
+    </form>
   </div> <!--  Closing ADD APP VIEW -->
 </div>
