--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -1,25 +1,38 @@
-<div class="container" ng-controller='AuthController'>
-  <div class="col-sm-8 col-sm-offset-2">
-    <div class="page-header"><h1>Login</h1></div>
-    <form name="signInForm" ng-submit="signin(signInForm.$valid)" novalidate>
+<div class="col-md-8 col-md-offset-2">
 
-      <div class="form-group" ng-class="{ 'has-error' : signInForm.username.$invalid && !signInForm.username.$pristine }">
-        <label>Username<img height='10px' width='10px' src='../Assets/required.png' /></label>
-        <input type="text" name="username" class="form-control" ng-model="user.username" ng-minlength="6" ng-maxlength="20">
-        <p ng-show="signInForm.username.$error.minlength" class="help-block">Username is too short.</p>
-        <p ng-show="signInForm.username.$error.maxlength" class="help-block">Username is too long.</p>
-      </div>
+  <!--Page Title -->
+  <div class="page-header"><h1>Login</h1></div>
 
-      <div class="form-group" ng-class="{ 'has-error' : signInForm.password.$invalid && !signInForm.password.$pristine }">
-        <label>Password <img height='10px' width='10px' src='../Assets/required.png' /></label>
-        <input type="password" name="password" class="form-control" ng-model="user.password" required>
-        <p ng-show="signInForm.password.$invalid && !signInForm.password.$pristine" class="help-block">Please Enter a password</p>
-      </div>
+  <!-- Sign Up Form Input Fields -->
+  <form name="signInForm" ng-submit="signin(signInForm.$valid)" novalidate>
 
-      <button type="submit" class="btn btn-primary" ng-disabled="signInForm.$invalid">Signin</button>
+    <!-- Email: Required field, has to be validated -->
+    <div class="form-group" ng-class="{ 'has-error' : signInForm.username.$invalid && !signInForm.username.$pristine }">
 
-    </form> <!-- closing Post form line 4 -->
-    <br>
-    <p>Need an account? <a href="/#!/signup">Signup</a></p>
-  </div>  <!-- closing div line 2 -->
-</div>  <!-- closing div line 1 -->
+      <label>Username<img height='10px' width='10px' src='../Assets/required.png' /></label>
+      <input type="text" name="username" class="form-control" ng-model="user.username" ng-minlength="6" ng-maxlength="20">
+
+      <!-- Invalid input error message -->
+      <p ng-show="signInForm.username.$error.minlength" class="help-block">Username is too short.</p>
+      <p ng-show="signInForm.username.$error.maxlength" class="help-block">Username is too long.</p>
+    </div>
+
+    <!-- Password: Required field, has to be validated -->
+    <div class="form-group" ng-class="{ 'has-error' : signInForm.password.$invalid && !signInForm.password.$pristine }">
+
+      <label>Password <img height='10px' width='10px' src='../Assets/required.png' /></label>
+      <input type="password" name="password" class="form-control" ng-model="user.password" required>
+
+      <!-- Invalid input error message -->
+      <p ng-show="signInForm.password.$invalid && !signInForm.password.$pristine" class="help-block">Please Enter a password</p>
+    </div>
+
+    <button type="submit" class="btn btn-primary" ng-disabled="signInForm.$invalid">Signin</button>
+
+  </form> <!-- Closing Log In From Input Fields -->
+
+  <br>
+
+  <p>Need an account? <a href="/#!/signup">Signup</a></p>
+  
+</div>  <!-- Closing Bootstrap Grid div -->
