--- a/client/app/login/signup.html
+++ b/client/app/login/signup.html
@@ -1,30 +1,48 @@
-<div class="container" ng-controller='AuthController'>
-  <div class="col-sm-8 col-sm-offset-2">
-    <div class="page-header"><h1>Signup</h1></div>
-    <form name="signUpForm" ng-submit="signup(signUpForm.$valid)" novalidate>
+<div class="col-md-8 col-md-offset-2">
 
-      <div class="form-group" ng-class="{ 'has-error' : signUpForm.username.$invalid && !signUpForm.username.$pristine }">
-        <label>Username<img height='10px' width='10px' src='../Assets/required.png' /></label>
-        <input type="text" name="username" class="form-control" ng-model="user.username" ng-minlength="6" ng-maxlength="20">
-        <p ng-show="signUpForm.username.$error.minlength" class="help-block">Username is too short.</p>
-        <p ng-show="signUpForm.username.$error.maxlength" class="help-block">Username is too long.</p>
-      </div>
+  <!--Page Title -->
+  <div class="page-header"><h1>Signup</h1></div>
 
-      <div class="form-group" ng-class="{ 'has-error' : signUpForm.email.$invalid && !signUpForm.email.$pristine }">
-        <label>Email<img height='10px' width='10px' src='../Assets/required.png' /></label>
-        <input type="email" name="email" class="form-control" ng-model="user.email" required>
-        <p ng-show="signUpForm.email.$invalid && !signUpForm.email.$pristine" class="help-block">Enter a valid email.</p>
-      </div>
+  <!-- Sign Up Form Input Fields -->
+  <form name="signUpForm" ng-submit="signup(signUpForm.$valid)" novalidate>
 
-      <div class="form-group" ng-class="{ 'has-error' : signUpForm.password.$invalid && !signUpForm.password.$pristine }">
-        <label>Password <img height='10px' width='10px' src='../Assets/required.png' /></label>
-        <input type="password" name="password" class="form-control" ng-model="user.password" required>
-        <p ng-show="signUpForm.password.$invalid && !signUpForm.password.$pristine" class="help-block">Not a valid password</p>
-      </div>
+    <!-- USERNAME: Required field, has to be longer than 6 char, less than 20 -->
+    <div class="form-group" ng-class="{ 'has-error' : signUpForm.username.$invalid && !signUpForm.username.$pristine }">
 
-      <button type="submit" class="btn btn-primary" ng-disabled="signUpForm.$invalid">Signup</button>
-    </form>  <!-- closing Post form line 4 -->
-    <br>
-    <p>Already have an account? <a href="/#!/login">Login</a></p>
-  </div>  <!-- closing div line 2 -->
-</div>  <!-- closing div line 1 -->
+      <label>Username<img height='10px' width='10px' src='../Assets/required.png' /></label>
+      <input type="text" name="username" class="form-control" ng-model="user.username" ng-minlength="6" ng-maxlength="20">
+
+      <!-- Invalid input error message -->
+      <p ng-show="signUpForm.username.$error.minlength" class="help-block">Username is too short.</p>
+      <p ng-show="signUpForm.username.$error.maxlength" class="help-block">Username is too long.</p>
+    </div>
+
+    <!-- Email: Required field, has to be validated -->
+    <div class="form-group" ng-class="{ 'has-error' : signUpForm.email.$invalid && !signUpForm.email.$pristine }">
+
+      <label>Email<img height='10px' width='10px' src='../Assets/required.png' /></label>
+      <input type="email" name="email" class="form-control" ng-model="user.email" required>
+
+      <!-- Invalid input error message -->
+      <p ng-show="signUpForm.email.$invalid && !signUpForm.email.$pristine" class="help-block">Enter a valid email.</p>
+    </div>
+
+    <!-- Password: Required field, has to be validated -->
+    <div class="form-group" ng-class="{ 'has-error' : signUpForm.password.$invalid && !signUpForm.password.$pristine }">
+
+      <label>Password <img height='10px' width='10px' src='../Assets/required.png' /></label>
+      <input type="password" name="password" class="form-control" ng-model="user.password" required>
+
+      <!-- Invalid input error message -->
+      <p ng-show="signUpForm.password.$invalid && !signUpForm.password.$pristine" class="help-block">Not a valid password</p>
+    </div>
+
+    <button type="submit" class="btn btn-primary" ng-disabled="signUpForm.$invalid">Signup</button>
+
+  </form>  <!-- Closing Sign Up From Input Fields -->
+
+  <br>
+
+  <p>Already have an account? <a href="/#!/login">Login</a></p>
+
+</div>  <!-- Closing Bootstrap Grid div -->
