--- a/client/app/addApps/addApps.html
+++ b/client/app/addApps/addApps.html
@@ -20,12 +20,11 @@
             <label>Position <img height='10px' width='10px' src='../Assets/required.png' /></label>
             <input class='form-control' id="field" class="mdl-textfield__input" type="text" ng-model="data.role">
           </div>
-          <div>
-            <form>
+          <div ng-controller="UploadController">
               <label>Cover Letter Upload</label>
-              <input class='form-control' name='coverLetter' type="file" enctype='multipart/form-data'>
-              <button type='submit' class="btn btn-default">Upload</button>
-            </form>
+              <div ngf-drop ngf-select ng-model="files" class="drop-box"
+                  ngf-drag-over-class="'dragover'" ngf-allow-dir="true" ngf-pattern="'.doc,.docx,.pdf/*'"
+                  >Drop file here to upload</div>
           </div>
           <div>
             <label>Job Description <img height='10px' width='10px' src='../Assets/required.png' /></label>
