--- a/client/index.html
+++ b/client/index.html
@@ -70,7 +70,9 @@
 
     <script src="angular/angular.js"></script>
     <script src="angular-route/angular-route.js"></script>
+    <script src="ng-file-upload/dist/ng-file-upload.min.js"></script>
     <script src="app.js"></script>
+    <script src="/addApps/uploadController.js"></script>
     <script src="/allApps/allAppsController.js"></script>
     <script src="/addApps/addAppsController.js"></script>
     <script src="/completedApps/completedAppsController.js"></script>
