feat(remove stage): remove stage
remove stage button works

--- a/client/app/allApps/allApps.html
+++ b/client/app/allApps/allApps.html
@@ -76,6 +76,7 @@
           <div id="field"><strong>Primary Interviewer Type:</strong><br>{{stage.interviewerType}}</div>
           <div id="field"><strong>Last Follow Up Date:</strong><br>{{stage.dateOfLastFollowUp}}</div>
           <div id="field"><strong>Reply Received:</strong><br>{{stage.interviewReplyReceived}}</div>
+          <div><button class='btn btn-danger' ng-click='removeStage($index)'>Remove Stage</button></div>
         </div>
 
         <!-- Displays Add Stage Card -->
