--- a/client/app/completedApps/completedApps.html
+++ b/client/app/completedApps/completedApps.html
@@ -1,14 +1,24 @@
-<div class="container">
-  <!-- ALL APPLICATION VIEW using FormController, Display depends on ng-show showDiv -->
-  <div id="positions">
+<!-- COMPLETED APPLICATION VIEW using FormController, Display depends on ng-show showDiv -->
+  <div class="col-md-8 col-md-offset-2">
 
-    <!-- ALL APPLICATION VIEW title -->
-    <h1 id="openApps">Completed Applications</h1>
+    <!-- COMPLETED APPLICATION VIEW title -->
+    <div class="page-header"><h1>Completed Applications</h1></div>
 
     <!-- Application Search -->
-    <div style="margin-left: 100px"  class="mdl-textfield mdl-js-textfield">Search:
-      <input id="field"  class="mdl-textfield__input" type="text" placeholder="Search Here" ng-model="searchText">
-    </div>
+
+    <form name='searchCompletedApp' class="form-group">
+      <label for ="searchCompletedApp">Search Completed Applications</label>
+      <div class = "input-group">
+
+        <!-- Input Field / Search Bar  -->
+        <input
+          type='text',
+          name='inputNewWishlist',
+          ng-model='searchText',
+          class="form-control"/>
+
+      </div> <!-- Closing input-group -->
+    </form> <!-- Closing from group -->
 
     <!-- ng-repeat APPLICATIONS. It has 1) Open Position Card, 2) Add Stage Card -->
     <ul ng-repeat='result in results | filter:searchText track by $index' ng-model='application'>
